FIX: no menu on mobile

--- a/style2.css
+++ b/style2.css
@@ -2997,6 +2997,7 @@ body {
 
 .header-has-img .head-sticky.head-bar {
     background-color: #fff;
+    display: none;
 }
 
 .header-has-img .head-sticky .nav-wrap .nav > ul > li > a {
